--- a/AlgorithmGossip/PossibleSet.htm
+++ b/AlgorithmGossip/PossibleSet.htm
@@ -33,7 +33,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -44,7 +44,7 @@
   
   
   
-  <title>²£¥Í¥i¯àªº¶°¦X</title>
+  <title>ç”¢ç”Ÿå¯èƒ½çš„é›†åˆ</title>
 </head>
 
 
@@ -61,19 +61,19 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ²£¥Í¥i¯àªº¶°¦X</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ç”¢ç”Ÿå¯èƒ½çš„é›†åˆ</a></h1>
 
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-µ¹©w¤@²Õ¼Æ¦r©Î²Å¸¹¡A²£¥Í©Ò¦³¥i¯àªº¶°¦X¡]¥]¬AªÅ¶°¦X¡^¡A¨Ò¦pµ¹©w1 2 3¡A«h¥i¯àªº¶°¦X¬°¡G{}¡B{1}¡B{1,2}¡B{1,2,3}¡B{1,3}¡B{2}¡B{2,3}¡B{3}¡C<br>
+çµ¦å®šä¸€çµ„æ•¸å­—æˆ–ç¬¦è™Ÿï¼Œç”¢ç”Ÿæ‰€æœ‰å¯èƒ½çš„é›†åˆï¼ˆåŒ…æ‹¬ç©ºé›†åˆï¼‰ï¼Œä¾‹å¦‚çµ¦å®š1 2 3ï¼Œå‰‡å¯èƒ½çš„é›†åˆç‚ºï¼š{}ã€{1}ã€{1,2}ã€{1,2,3}ã€{1,3}ã€{2}ã€{2,3}ã€{3}ã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-¦pªG¤£¦Ò¼{¦r¨å¶¶§Ç¡A«h¦³­ÓÂ²³æªº¤èªk¥i¥H²£¥Í©Ò¦³ªº¶°¦X¡A«ä¦Ò¤G¶i¦ì¼Æ¦r¥[ªk¡A¨Ãª`·N1¥X²{ªº¦ì¸m¡A¦pªG¨C­Ó¦ì¸m³£¹ïÀ³¤@­Ó¼Æ¦r¡A«h¥Ñ1©Ò¹ïÀ³ªº¼Æ¦r©Ò²£¥Íªº´N¬O¤@­Ó¶°¦X¡A¨Ò¦p¡G <br>
+å¦‚æœä¸è€ƒæ…®å­—å…¸é †åºï¼Œå‰‡æœ‰å€‹ç°¡å–®çš„æ–¹æ³•å¯ä»¥ç”¢ç”Ÿæ‰€æœ‰çš„é›†åˆï¼Œæ€è€ƒäºŒé€²ä½æ•¸å­—åŠ æ³•ï¼Œä¸¦æ³¨æ„1å‡ºç¾çš„ä½ç½®ï¼Œå¦‚æœæ¯å€‹ä½ç½®éƒ½å°æ‡‰ä¸€å€‹æ•¸å­—ï¼Œå‰‡ç”±1æ‰€å°æ‡‰çš„æ•¸å­—æ‰€ç”¢ç”Ÿçš„å°±æ˜¯ä¸€å€‹é›†åˆï¼Œä¾‹å¦‚ï¼š <br>
 
 
 <table border="1" width="50%">
@@ -179,9 +179,9 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-ÁA¸Ñ³o­Ó¤èªk¤§«á¡A³Ñ¤Uªº´N¬O¦p¦ó²£¥Í¤G¶i¦ì¼Æ¡H¦³³\¦h¤èªk¥i¥H¨Ï¥Î¡A±z¥i¥H¨Ï¥Îunsigned«¬§O¥[¤W&amp;¦ì¤¸¹Bºâ¨Ó²£¥Í¡A³oÃä«h¬O¨Ï¥Î°}¦C·j
-´M¡A­º¥ı°}¦C¤º®e¥ş¬°0¡A§ä²Ä¤@­Ó1¡A¦bÁÙ¨S§ä¨ì¤§«e±N¨«³X¹Lªº¤º®eÅÜ¬°0¡A¦Ó²Ä¤@­Ó§ä¨ìªº0«hÅÜ¬°
-1¡A¦p¦¹­«½Æª½¨ì©Ò¦³ªº°}¦C¤¸¯À³£ÅÜ¬°1¬°¤î¡A¨Ò¦p¡G<br>
+ç­è§£é€™å€‹æ–¹æ³•ä¹‹å¾Œï¼Œå‰©ä¸‹çš„å°±æ˜¯å¦‚ä½•ç”¢ç”ŸäºŒé€²ä½æ•¸ï¼Ÿæœ‰è¨±å¤šæ–¹æ³•å¯ä»¥ä½¿ç”¨ï¼Œæ‚¨å¯ä»¥ä½¿ç”¨unsignedå‹åˆ¥åŠ ä¸Š&amp;ä½å…ƒé‹ç®—ä¾†ç”¢ç”Ÿï¼Œé€™é‚Šå‰‡æ˜¯ä½¿ç”¨é™£åˆ—æœ
+å°‹ï¼Œé¦–å…ˆé™£åˆ—å…§å®¹å…¨ç‚º0ï¼Œæ‰¾ç¬¬ä¸€å€‹1ï¼Œåœ¨é‚„æ²’æ‰¾åˆ°ä¹‹å‰å°‡èµ°è¨ªéçš„å…§å®¹è®Šç‚º0ï¼Œè€Œç¬¬ä¸€å€‹æ‰¾åˆ°çš„0å‰‡è®Šç‚º
+1ï¼Œå¦‚æ­¤é‡è¤‡ç›´åˆ°æ‰€æœ‰çš„é™£åˆ—å…ƒç´ éƒ½è®Šç‚º1ç‚ºæ­¢ï¼Œä¾‹å¦‚ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">000&nbsp;=&gt; 100&nbsp;=&gt; 010&nbsp;=&gt; 110&nbsp;=&gt; 001&nbsp;=&gt; 101&nbsp;=&gt; 011&nbsp;=&gt; 111</span><br>
 
@@ -189,7 +189,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¦pªG­n²£¥Í¦r¨å¶¶§Ç¡A¨Ò¦p­Y¦³4­Ó¤¸¯À¡A«h¡G<br>
+å¦‚æœè¦ç”¢ç”Ÿå­—å…¸é †åºï¼Œä¾‹å¦‚è‹¥æœ‰4å€‹å…ƒç´ ï¼Œå‰‡ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">{} =&gt; {1} =&gt; {1,2} =&gt; {1,2,3}&nbsp;=&gt; {1,2,3,4}&nbsp;=&gt;</span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -211,7 +211,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-Â²³æªº»¡¡A¦pªG¦³n­Ó¤¸¯À­n²£¥Í¥i¯àªº¶°¦X¡A·í¨Ì§Ç²£¥Í¶°¦X®É¡A¦pªG³Ì«á¤@­Ó¤¸¯À¬On¡A¦Ó­Ë¼Æ²Ä¤G­Ó¤¸¯À¬Omªº¸Ü¡A¨Ò¦p¡G<br>
+ç°¡å–®çš„èªªï¼Œå¦‚æœæœ‰nå€‹å…ƒç´ è¦ç”¢ç”Ÿå¯èƒ½çš„é›†åˆï¼Œç•¶ä¾åºç”¢ç”Ÿé›†åˆæ™‚ï¼Œå¦‚æœæœ€å¾Œä¸€å€‹å…ƒç´ æ˜¯nï¼Œè€Œå€’æ•¸ç¬¬äºŒå€‹å…ƒç´ æ˜¯mçš„è©±ï¼Œä¾‹å¦‚ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">{a b c d e n}</span><br>
 
@@ -219,40 +219,26 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-«h¤U¤@­Ó¶°¦X´N¬O{a b c d e+1}¡A¦A¨Ì§Ç¥[¤J«áÄòªº¤¸¯À¡C<br>
+å‰‡ä¸‹ä¸€å€‹é›†åˆå°±æ˜¯{a b c d e+1}ï¼Œå†ä¾åºåŠ å…¥å¾ŒçºŒçš„å…ƒç´ ã€‚<br>
 
 <br>
 
-¨Ò¦p¦³¥|­Ó¤¸¯À¡A¦Ó·í²£¥Í{1 2 3 4}¶°¦X®É¡A«h¤U¤@­Ó¶°¦X´N¬O{1 2 3+1}¡A¤]´N¬O{1 2
-4}¡A¥Ñ©ó³Ì«á¤@­Ó¤¸¯ÀÁÙ¬O4¡A©Ò¥H¤U¤@­Ó¶°¦X´N¬O{1 2+1}¡A¤]´N¬O{1 3}¡A±µ¤U¨Ó¦A¥[¤J«áÄò¤¸¯À4¡A¤]´N¬O{1 3
-4}¡A¥Ñ©ó¤S¹J¨ì¤¸¯À4¡A©Ò¥H¤U¤@­Ó¶°¦X¬O{1 3+1}¡A¤]´N¬O{1 4}¡C<br>
+ä¾‹å¦‚æœ‰å››å€‹å…ƒç´ ï¼Œè€Œç•¶ç”¢ç”Ÿ{1 2 3 4}é›†åˆæ™‚ï¼Œå‰‡ä¸‹ä¸€å€‹é›†åˆå°±æ˜¯{1 2 3+1}ï¼Œä¹Ÿå°±æ˜¯{1 2
+4}ï¼Œç”±æ–¼æœ€å¾Œä¸€å€‹å…ƒç´ é‚„æ˜¯4ï¼Œæ‰€ä»¥ä¸‹ä¸€å€‹é›†åˆå°±æ˜¯{1 2+1}ï¼Œä¹Ÿå°±æ˜¯{1 3}ï¼Œæ¥ä¸‹ä¾†å†åŠ å…¥å¾ŒçºŒå…ƒç´ 4ï¼Œä¹Ÿå°±æ˜¯{1 3
+4}ï¼Œç”±æ–¼åˆé‡åˆ°å…ƒç´ 4ï¼Œæ‰€ä»¥ä¸‹ä¸€å€‹é›†åˆæ˜¯{1 3+1}ï¼Œä¹Ÿå°±æ˜¯{1 4}ã€‚<br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
 
-  <li> C¡]µL¦r¨å¶¶§Ç¡^
+  <li> Cï¼ˆç„¡å­—å…¸é †åºï¼‰
   </li>
 
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define MAXSIZE 20 <br><br>int main(void) { <br>    char digit[MAXSIZE]; <br>    int i, j; <br>    int n; <br><br>    printf("¿é¤J¶°¦X­Ó¼Æ¡G"); <br>    scanf("%d", &amp;n); <br><br>    for(i = 0; i &lt; n; i++) <br>        digit[i] = '0'; <br><br>    printf("\n{}"); // ªÅ¶°¦X <br><br>    while(1) { <br>        // §ä²Ä¤@­Ó0¡A¨Ã±N§ä¨ì«e©Ò¸g¹Lªº¤¸¯ÀÅÜ¬°0 <br>        for(i = 0; i &lt; n &amp;&amp; digit[i] == '1'; digit[i] = '0', i++); <br><br>        if(i == n)  // §ä¤£¨ì0 <br>            break; <br>        else          // ±N²Ä¤@­Ó§ä¨ìªº0ÅÜ¬°1 <br>            digit[i] = '1'; <br><br>        // §ä²Ä¤@­Ó1¡A¨Ã°O¿ı¹ïÀ³¦ì¸m <br>        for(i = 0; i &lt; n &amp;&amp; digit[i] == '0'; i++); <br><br>        printf("\n{%d", i+1); <br>    <br>        for(j = i + 1; j &lt; n; j++) <br>            if(digit[j] == '1') <br>                printf(",%d", j + 1); <br><br>        printf("}"); <br>    } <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br></pre>
-
-
-<br>
-
-
-<ul>
-
-  <li> C¡]¦r¨å¶¶§Ç¡^
-  </li>
-
-</ul>
-
-
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define MAXSIZE 20 <br><br>int main(void) { <br>    int set[MAXSIZE]; <br>    int i, n, position = 0; <br><br>    printf("¿é¤J¶°¦X­Ó¼Æ¡G"); <br>    scanf("%d", &amp;n); <br>    printf("\n{}"); <br>    set[position] = 1; <br><br>    while(1) { <br>        printf("\n{%d", set[0]);  // ¦L²Ä¤@­Ó¼Æ <br>        for(i = 1; i &lt;= position; i++) <br>            printf(",%d", set[i]); <br>        printf("}"); <br><br>        if(set[position] &lt; n) {  // »¼¼W¶°¦X­Ó¼Æ <br>            set[position+1] = set[position] + 1; <br>            position++; <br>        } <br>        else if(position != 0) {  // ¦pªG¤£¬O²Ä¤@­Ó¦ì¸m <br>            position--;       // ­Ë°h <br>            set[position]++;  // ¤U¤@­Ó¶°¦X§À¼Æ <br>        } <br>        else  // ¤w­Ë°h¦Ü²Ä¤@­Ó¦ì¸m <br>            break; <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define MAXSIZE 20 <br><br>int main(void) { <br>    char digit[MAXSIZE]; <br>    int i, j; <br>    int n; <br><br>    printf("è¼¸å…¥é›†åˆå€‹æ•¸ï¼š"); <br>    scanf("%d", &amp;n); <br><br>    for(i = 0; i &lt; n; i++) <br>        digit[i] = '0'; <br><br>    printf("\n{}"); // ç©ºé›†åˆ <br><br>    while(1) { <br>        // æ‰¾ç¬¬ä¸€å€‹0ï¼Œä¸¦å°‡æ‰¾åˆ°å‰æ‰€ç¶“éçš„å…ƒç´ è®Šç‚º0 <br>        for(i = 0; i &lt; n &amp;&amp; digit[i] == '1'; digit[i] = '0', i++); <br><br>        if(i == n)  // æ‰¾ä¸åˆ°0 <br>            break; <br>        else          // å°‡ç¬¬ä¸€å€‹æ‰¾åˆ°çš„0è®Šç‚º1 <br>            digit[i] = '1'; <br><br>        // æ‰¾ç¬¬ä¸€å€‹1ï¼Œä¸¦è¨˜éŒ„å°æ‡‰ä½ç½® <br>        for(i = 0; i &lt; n &amp;&amp; digit[i] == '0'; i++); <br><br>        printf("\n{%d", i+1); <br>    <br>        for(j = i + 1; j &lt; n; j++) <br>            if(digit[j] == '1') <br>                printf(",%d", j + 1); <br><br>        printf("}"); <br>    } <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br></pre>
 
 
 <br>
@@ -260,13 +246,13 @@ Gossip@caterpillar</a></h3>
 
 <ul>
 
-  <li> Java¡]µL¦r¨å¶¶§Ç¡^
+  <li> Cï¼ˆå­—å…¸é †åºï¼‰
   </li>
 
 </ul>
 
 
-<pre>public class PossibleSet {<br>    public static void main(String[] args) {<br>        char[] digit = new char[4]; <br><br>        for(int i = 0; i &lt; digit.length; i++) <br>            digit[i] = '0'; <br><br>        System.out.println("{}"); // ªÅ¶°¦X <br><br>        while(true) { <br>            // §ä²Ä¤@­Ó0¡A¨Ã±N§ä¨ì«e©Ò¸g¹Lªº¤¸¯ÀÅÜ¬°0<br>            int i;<br>            for(i = 0; i &lt; digit.length &amp;&amp; digit[i] == '1'; <br>                digit[i] = '0', i++); <br><br>            if(i == digit.length)  // §ä¤£¨ì0 <br>                break; <br>            else          // ±N²Ä¤@­Ó§ä¨ìªº0ÅÜ¬°1 <br>                digit[i] = '1'; <br><br>            // §ä²Ä¤@­Ó1¡A¨Ã°O¿ı¹ïÀ³¦ì¸m <br>            for(i = 0; i &lt; digit.length &amp;&amp; digit[i] == '0'; i++); <br><br>            System.out.print("{" + (i+1)); <br>        <br>            for(int j = i + 1; j &lt; digit.length; j++) <br>                if(digit[j] == '1') <br>                    System.out.print(", " + (j + 1)); <br><br>            System.out.println("}"); <br>        } <br>    }<br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define MAXSIZE 20 <br><br>int main(void) { <br>    int set[MAXSIZE]; <br>    int i, n, position = 0; <br><br>    printf("è¼¸å…¥é›†åˆå€‹æ•¸ï¼š"); <br>    scanf("%d", &amp;n); <br>    printf("\n{}"); <br>    set[position] = 1; <br><br>    while(1) { <br>        printf("\n{%d", set[0]);  // å°ç¬¬ä¸€å€‹æ•¸ <br>        for(i = 1; i &lt;= position; i++) <br>            printf(",%d", set[i]); <br>        printf("}"); <br><br>        if(set[position] &lt; n) {  // éå¢é›†åˆå€‹æ•¸ <br>            set[position+1] = set[position] + 1; <br>            position++; <br>        } <br>        else if(position != 0) {  // å¦‚æœä¸æ˜¯ç¬¬ä¸€å€‹ä½ç½® <br>            position--;       // å€’é€€ <br>            set[position]++;  // ä¸‹ä¸€å€‹é›†åˆå°¾æ•¸ <br>        } <br>        else  // å·²å€’é€€è‡³ç¬¬ä¸€å€‹ä½ç½® <br>            break; <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br></pre>
 
 
 <br>
@@ -274,13 +260,27 @@ Gossip@caterpillar</a></h3>
 
 <ul>
 
-  <li> Java¡]¦r¨å¶¶§Ç¡^
+  <li> Javaï¼ˆç„¡å­—å…¸é †åºï¼‰
   </li>
 
 </ul>
 
 
-<pre>public class PossibleSet {<br>    public static void main(String[] args) {<br>        int[] set = new int[4]; <br>        int i, n, position = 0; <br><br>        set[position] = 1; <br><br>        while(true) { <br>            System.out.print("{" + set[0]);  // ¦L²Ä¤@­Ó¼Æ <br>            for(i = 1; i &lt;= position; i++) <br>                System.out.print("," + set[i]); <br>            System.out.print("}"); <br><br>            if(set[position] &lt; set.length) {  // »¼¼W¶°¦X­Ó¼Æ <br>                set[position+1] = set[position] + 1; <br>                position++; <br>            } <br>            else if(position != 0) {  // ¦pªG¤£¬O²Ä¤@­Ó¦ì¸m <br>                position--;       // ­Ë°h <br>                set[position]++;  // ¤U¤@­Ó¶°¦X§À¼Æ <br>            } <br>            else  // ¤w­Ë°h¦Ü²Ä¤@­Ó¦ì¸m <br>                break; <br>        } <br><br>        System.out.println(); <br>    }<br>}</pre>
+<pre>public class PossibleSet {<br>    public static void main(String[] args) {<br>        char[] digit = new char[4]; <br><br>        for(int i = 0; i &lt; digit.length; i++) <br>            digit[i] = '0'; <br><br>        System.out.println("{}"); // ç©ºé›†åˆ <br><br>        while(true) { <br>            // æ‰¾ç¬¬ä¸€å€‹0ï¼Œä¸¦å°‡æ‰¾åˆ°å‰æ‰€ç¶“éçš„å…ƒç´ è®Šç‚º0<br>            int i;<br>            for(i = 0; i &lt; digit.length &amp;&amp; digit[i] == '1'; <br>                digit[i] = '0', i++); <br><br>            if(i == digit.length)  // æ‰¾ä¸åˆ°0 <br>                break; <br>            else          // å°‡ç¬¬ä¸€å€‹æ‰¾åˆ°çš„0è®Šç‚º1 <br>                digit[i] = '1'; <br><br>            // æ‰¾ç¬¬ä¸€å€‹1ï¼Œä¸¦è¨˜éŒ„å°æ‡‰ä½ç½® <br>            for(i = 0; i &lt; digit.length &amp;&amp; digit[i] == '0'; i++); <br><br>            System.out.print("{" + (i+1)); <br>        <br>            for(int j = i + 1; j &lt; digit.length; j++) <br>                if(digit[j] == '1') <br>                    System.out.print(", " + (j + 1)); <br><br>            System.out.println("}"); <br>        } <br>    }<br>} <br></pre>
+
+
+<br>
+
+
+<ul>
+
+  <li> Javaï¼ˆå­—å…¸é †åºï¼‰
+  </li>
+
+</ul>
+
+
+<pre>public class PossibleSet {<br>    public static void main(String[] args) {<br>        int[] set = new int[4]; <br>        int i, n, position = 0; <br><br>        set[position] = 1; <br><br>        while(true) { <br>            System.out.print("{" + set[0]);  // å°ç¬¬ä¸€å€‹æ•¸ <br>            for(i = 1; i &lt;= position; i++) <br>                System.out.print("," + set[i]); <br>            System.out.print("}"); <br><br>            if(set[position] &lt; set.length) {  // éå¢é›†åˆå€‹æ•¸ <br>                set[position+1] = set[position] + 1; <br>                position++; <br>            } <br>            else if(position != 0) {  // å¦‚æœä¸æ˜¯ç¬¬ä¸€å€‹ä½ç½® <br>                position--;       // å€’é€€ <br>                set[position]++;  // ä¸‹ä¸€å€‹é›†åˆå°¾æ•¸ <br>            } <br>            else  // å·²å€’é€€è‡³ç¬¬ä¸€å€‹ä½ç½® <br>                break; <br>        } <br><br>        System.out.println(); <br>    }<br>}</pre>
 
 <br>
 
