--- a/AlgorithmGossip/Permutation.htm
+++ b/AlgorithmGossip/Permutation.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>±Æ¦C²Õ¦X</title>
+  <title>æ’åˆ—çµ„åˆ</title>
 </head>
 
 
@@ -51,31 +51,31 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ±Æ¦C²Õ¦X</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: æ’åˆ—çµ„åˆ</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
-±N¤@²Õ¼Æ¦r¡B¦r¥À©Î²Å¸¹¶i¦æ±Æ¦C¡A¥H±o¨ì¤£¦Pªº²Õ¦X¶¶§Ç¡A¨Ò¦p1 2 3³o¤T­Ó¼Æªº±Æ¦C²Õ¦X¦³¡G1 2 3¡B1 3 2¡B2 1 3¡B2 3 1¡B3 1 2¡B3 2 1¡C<br>
-<h2>¸Ñªk</h2>
-¥i¥H¨Ï¥Î»¼°j±N°İÃD¤Á³Î¬°¸û¤pªº³æ¤¸¶i¦æ±Æ¦C²Õ¦X¡A¨Ò¦p1 2 3 4ªº±Æ¦C¥i¥H¤À¬°1 [2 3 4]¡B2 [1 3 4]¡B3 [1 2 4]¡B4
-[1 2 3]¶i¦æ±Æ¦C¡A³oÃä§Q¥Î±ÛÂàªk¡A¥ı±N±ÛÂà¶¡¹j³]¬°0¡A±N³Ì¥kÃäªº¼Æ¦r±ÛÂà¦Ü³Ì¥ªÃä¡A¨Ã³v¨B¼W¥[±ÛÂàªº¶¡¹j¡A¨Ò¦p¡G<br>
-<div style="margin-left: 40px;"><span style="font-weight: bold;">1 2 3 4 -&gt; ±ÛÂà1 -&gt; Ä~Äò±N¥kÃä2 3 4¶i¦æ»¼°j³B²z</span><br style="font-weight: bold;">
-<span style="font-weight: bold;">2 1 3 4 -&gt; ±ÛÂà1 2 ÅÜ¬° 2 1-&gt; Ä~Äò±N¥kÃä1 3 4¶i¦æ»¼°j³B²z</span><br style="font-weight: bold;">
-<span style="font-weight: bold;">3 1 2 4 -&gt; ±ÛÂà1 2 3ÅÜ¬° 3 1 2 -&gt; Ä~Äò±N¥kÃä1 2 4¶i¦æ»¼°j³B²z</span><br style="font-weight: bold;">
-<span style="font-weight: bold;">4 1 2 3 -&gt; ±ÛÂà1 2 3 4ÅÜ¬°4 1 2 3 -&gt; Ä~Äò±N¥kÃä1 2 3¶i¦æ»¼°j³B²z </span><br>
+<h2>èªªæ˜</h2>
+å°‡ä¸€çµ„æ•¸å­—ã€å­—æ¯æˆ–ç¬¦è™Ÿé€²è¡Œæ’åˆ—ï¼Œä»¥å¾—åˆ°ä¸åŒçš„çµ„åˆé †åºï¼Œä¾‹å¦‚1 2 3é€™ä¸‰å€‹æ•¸çš„æ’åˆ—çµ„åˆæœ‰ï¼š1 2 3ã€1 3 2ã€2 1 3ã€2 3 1ã€3 1 2ã€3 2 1ã€‚<br>
+<h2>è§£æ³•</h2>
+å¯ä»¥ä½¿ç”¨éè¿´å°‡å•é¡Œåˆ‡å‰²ç‚ºè¼ƒå°çš„å–®å…ƒé€²è¡Œæ’åˆ—çµ„åˆï¼Œä¾‹å¦‚1 2 3 4çš„æ’åˆ—å¯ä»¥åˆ†ç‚º1 [2 3 4]ã€2 [1 3 4]ã€3 [1 2 4]ã€4
+[1 2 3]é€²è¡Œæ’åˆ—ï¼Œé€™é‚Šåˆ©ç”¨æ—‹è½‰æ³•ï¼Œå…ˆå°‡æ—‹è½‰é–“éš”è¨­ç‚º0ï¼Œå°‡æœ€å³é‚Šçš„æ•¸å­—æ—‹è½‰è‡³æœ€å·¦é‚Šï¼Œä¸¦é€æ­¥å¢åŠ æ—‹è½‰çš„é–“éš”ï¼Œä¾‹å¦‚ï¼š<br>
+<div style="margin-left: 40px;"><span style="font-weight: bold;">1 2 3 4 -&gt; æ—‹è½‰1 -&gt; ç¹¼çºŒå°‡å³é‚Š2 3 4é€²è¡Œéè¿´è™•ç†</span><br style="font-weight: bold;">
+<span style="font-weight: bold;">2 1 3 4 -&gt; æ—‹è½‰1 2 è®Šç‚º 2 1-&gt; ç¹¼çºŒå°‡å³é‚Š1 3 4é€²è¡Œéè¿´è™•ç†</span><br style="font-weight: bold;">
+<span style="font-weight: bold;">3 1 2 4 -&gt; æ—‹è½‰1 2 3è®Šç‚º 3 1 2 -&gt; ç¹¼çºŒå°‡å³é‚Š1 2 4é€²è¡Œéè¿´è™•ç†</span><br style="font-weight: bold;">
+<span style="font-weight: bold;">4 1 2 3 -&gt; æ—‹è½‰1 2 3 4è®Šç‚º4 1 2 3 -&gt; ç¹¼çºŒå°‡å³é‚Š1 2 3é€²è¡Œéè¿´è™•ç† </span><br>
 </div>
 
 <br>
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define N 4 <br><br>void perm(int*, int); <br><br>int main(void) { <br>    int num[N+1], i; <br><br>    for(i = 1; i &lt;= N; i++) <br>        num[i] = i; <br><br>    perm(num, 1); <br><br>    return 0; <br>} <br><br>void perm(int* num, int i) { <br>    int j, k, tmp; <br><br>    if(i &lt; N) { <br>        for(j = i; j &lt;= N; j++) { <br>            tmp = num[j]; <br>            // ±ÛÂà¸Ó°Ï¬q³Ì¥kÃä¼Æ¦r¦Ü³Ì¥ªÃä <br>            for(k = j; k &gt; i; k--) <br>                num[k] = num[k-1]; <br>            num[i] = tmp; <br><br>            perm(num, i+1); <br><br>            // ÁÙ­ì <br>            for(k = i; k &lt; j; k++) <br>                num[k] = num[k+1]; <br>            num[j] = tmp; <br>        } <br>    } <br>    else {  // Åã¥Ü¦¹¦¸±Æ¦C <br>        for(j = 1; j &lt;= N; j++) <br>            printf("%d ", num[j]); <br>        printf("\n"); <br>    } <br>}  <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define N 4 <br><br>void perm(int*, int); <br><br>int main(void) { <br>    int num[N+1], i; <br><br>    for(i = 1; i &lt;= N; i++) <br>        num[i] = i; <br><br>    perm(num, 1); <br><br>    return 0; <br>} <br><br>void perm(int* num, int i) { <br>    int j, k, tmp; <br><br>    if(i &lt; N) { <br>        for(j = i; j &lt;= N; j++) { <br>            tmp = num[j]; <br>            // æ—‹è½‰è©²å€æ®µæœ€å³é‚Šæ•¸å­—è‡³æœ€å·¦é‚Š <br>            for(k = j; k &gt; i; k--) <br>                num[k] = num[k-1]; <br>            num[i] = tmp; <br><br>            perm(num, i+1); <br><br>            // é‚„åŸ <br>            for(k = i; k &lt; j; k++) <br>                num[k] = num[k+1]; <br>            num[j] = tmp; <br>        } <br>    } <br>    else {  // é¡¯ç¤ºæ­¤æ¬¡æ’åˆ— <br>        for(j = 1; j &lt;= N; j++) <br>            printf("%d ", num[j]); <br>        printf("\n"); <br>    } <br>}  <br></pre>
 
 <br>
 
@@ -84,7 +84,7 @@ Gossip@caterpillar</a></h3>
   </li>
 </ul>
 
-<pre>public class Permutation {<br>    public static void perm(int[] num, int i) {<br><br>        if(i &lt; num.length - 1) { <br>            for(int j = i; j &lt;= num.length - 1; j++) { <br>                int tmp = num[j]; <br>                // ±ÛÂà¸Ó°Ï¬q³Ì¥kÃä¼Æ¦r¦Ü³Ì¥ªÃä <br>                for(int k = j; k &gt; i; k--) <br>                    num[k] = num[k-1]; <br>                num[i] = tmp; <br><br>                perm(num, i+1); <br><br>                // ÁÙ­ì <br>                for(int k = i; k &lt; j; k++) <br>                    num[k] = num[k+1]; <br>                num[j] = tmp; <br>            } <br>        } <br>        else {  // Åã¥Ü¦¹¦¸±Æ¦C <br>            for(int j = 1; j &lt;= num.length - 1; j++) <br>                System.out.print(num[j] + " "); <br>            System.out.println(); <br>        } <br>    }<br><br>    public static void main(String[] args) {<br>        int[] num = new int[4+1]; <br><br>        for(int i = 1; i &lt;= num.length - 1; i++) <br>            num[i] = i; <br><br>        perm(num, 1); <br>    }<br>}<br></pre>
+<pre>public class Permutation {<br>    public static void perm(int[] num, int i) {<br><br>        if(i &lt; num.length - 1) { <br>            for(int j = i; j &lt;= num.length - 1; j++) { <br>                int tmp = num[j]; <br>                // æ—‹è½‰è©²å€æ®µæœ€å³é‚Šæ•¸å­—è‡³æœ€å·¦é‚Š <br>                for(int k = j; k &gt; i; k--) <br>                    num[k] = num[k-1]; <br>                num[i] = tmp; <br><br>                perm(num, i+1); <br><br>                // é‚„åŸ <br>                for(int k = i; k &lt; j; k++) <br>                    num[k] = num[k+1]; <br>                num[j] = tmp; <br>            } <br>        } <br>        else {  // é¡¯ç¤ºæ­¤æ¬¡æ’åˆ— <br>            for(int j = 1; j &lt;= num.length - 1; j++) <br>                System.out.print(num[j] + " "); <br>            System.out.println(); <br>        } <br>    }<br><br>    public static void main(String[] args) {<br>        int[] num = new int[4+1]; <br><br>        for(int i = 1; i &lt;= num.length - 1; i++) <br>            num[i] = i; <br><br>        perm(num, 1); <br>    }<br>}<br></pre>
 <br>
 
 
