--- a/AlgorithmGossip/QuickSort1.htm
+++ b/AlgorithmGossip/QuickSort1.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>§Ö³t±Æ§Çªk¡]¤@¡^</title>
+  <title>å¿«é€Ÿæ’åºæ³•ï¼ˆä¸€ï¼‰</title>
 </head>
 
 
@@ -51,53 +51,53 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: §Ö³t±Æ§Çªk¡]¤@¡^</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: å¿«é€Ÿæ’åºæ³•ï¼ˆä¸€ï¼‰</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
-§Ö³t±Æ§Çªk¡]quick sort¡^¬O¥Ø«e©Ò¤½»{³Ì§Öªº±Æ§Ç¤èªk¤§¤@¡]µø¸ÑÃDªº¹ï¶H¦Ó©w¡^¡AÁöµM§Ö³t±Æ§Çªk¦b³Ì®tª¬ªp¤U¥i¥H¹FO(n<sup>2</sup>)¡A¦ı¬O¦b¦h¼Æªº±¡ªp¤U¡A§Ö³t±Æ§Çªkªº®Ä²vªí²{¬O¬Û·í¤£¿ùªº¡C<br>
+<h2>èªªæ˜</h2>
+å¿«é€Ÿæ’åºæ³•ï¼ˆquick sortï¼‰æ˜¯ç›®å‰æ‰€å…¬èªæœ€å¿«çš„æ’åºæ–¹æ³•ä¹‹ä¸€ï¼ˆè¦–è§£é¡Œçš„å°è±¡è€Œå®šï¼‰ï¼Œé›–ç„¶å¿«é€Ÿæ’åºæ³•åœ¨æœ€å·®ç‹€æ³ä¸‹å¯ä»¥é”O(n<sup>2</sup>)ï¼Œä½†æ˜¯åœ¨å¤šæ•¸çš„æƒ…æ³ä¸‹ï¼Œå¿«é€Ÿæ’åºæ³•çš„æ•ˆç‡è¡¨ç¾æ˜¯ç›¸ç•¶ä¸éŒ¯çš„ã€‚<br>
 <br>
-§Ö³t±Æ§Çªkªº°ò¥»ºë¯«¬O¦b¼Æ¦C¤¤§ä¥X¾A·íªº¶b¤ß¡AµM«á±N¼Æ¦C¤@¤À¬°¤G¡A¤À§O¹ï¥ªÃä»P¥kÃä¼Æ¦C¶i¦æ±Æ§Ç¡A¦Ó¼vÅT§Ö³t±Æ§Çªk®Ä²vªº¥¿¬O¶b¤ßªº¿ï¾Ü¡C<br>
+å¿«é€Ÿæ’åºæ³•çš„åŸºæœ¬ç²¾ç¥æ˜¯åœ¨æ•¸åˆ—ä¸­æ‰¾å‡ºé©ç•¶çš„è»¸å¿ƒï¼Œç„¶å¾Œå°‡æ•¸åˆ—ä¸€åˆ†ç‚ºäºŒï¼Œåˆ†åˆ¥å°å·¦é‚Šèˆ‡å³é‚Šæ•¸åˆ—é€²è¡Œæ’åºï¼Œè€Œå½±éŸ¿å¿«é€Ÿæ’åºæ³•æ•ˆç‡çš„æ­£æ˜¯è»¸å¿ƒçš„é¸æ“‡ã€‚<br>
 <br>
-³oÃä©Ò¤¶²Ğªº²Ä¤@­Ó§Ö³t±Æ§Çªkª©¥»¡A¬O¦b¦h¼Æªº±Ğ¬ì®Ñ¤W©Ò´£¤Îªºª©¥»¡A¦]¬°¥¦³Ì®e©ö²z¸Ñ¡A¤]³Ì²Å¦X¶b¤ß¤À³Î»P¥ª¥k¶i¦æ±Æ§Çªº·§©À¡A¾A¦X¹ïªì¾ÇªÌ¶i¦æÁ¿¸Ñ¡C<br>
-<h2>¸Ñªk</h2>
-³oÃä©Ò¤¶²Ğªº§Ö³tºtºâ¦p¤U¡G<br>
+é€™é‚Šæ‰€ä»‹ç´¹çš„ç¬¬ä¸€å€‹å¿«é€Ÿæ’åºæ³•ç‰ˆæœ¬ï¼Œæ˜¯åœ¨å¤šæ•¸çš„æ•™ç§‘æ›¸ä¸Šæ‰€æåŠçš„ç‰ˆæœ¬ï¼Œå› ç‚ºå®ƒæœ€å®¹æ˜“ç†è§£ï¼Œä¹Ÿæœ€ç¬¦åˆè»¸å¿ƒåˆ†å‰²èˆ‡å·¦å³é€²è¡Œæ’åºçš„æ¦‚å¿µï¼Œé©åˆå°åˆå­¸è€…é€²è¡Œè¬›è§£ã€‚<br>
+<h2>è§£æ³•</h2>
+é€™é‚Šæ‰€ä»‹ç´¹çš„å¿«é€Ÿæ¼”ç®—å¦‚ä¸‹ï¼š<br>
 <ol>
-  <li>±N³Ì¥ªÃäªº¼Æ³]©w¬°¶b¡A¨Ã°O¿ı¨ä­È¬° s</li>
+  <li>å°‡æœ€å·¦é‚Šçš„æ•¸è¨­å®šç‚ºè»¸ï¼Œä¸¦è¨˜éŒ„å…¶å€¼ç‚º s</li>
 </ol>
 <br>
-&#24315;°é³B²z¡G<br>
+&#24315;åœˆè™•ç†ï¼š<br>
 <ol>
-  <li>¥O¯Á¤Ş i ±q¼Æ¦C¥ª¤è©¹¥k¤è§ä¡Aª½¨ì§ä¨ì¤j©ó s ªº¼Æ</li>
-  <li>¥O¯Á¤Ş j ±q¼Æ¦C¥ª¥k¤è©¹¥ª¤è§ä¡Aª½¨ì§ä¨ì¤p©ó s ªº¼Æ</li>
-  <li>¦pªG i &gt;= j¡A«hÂ÷¶}°j°é</li>
-  <li>¦pªG i &lt; j¡A«h¥æ´«¯Á¤Şi»Pj¨â³Bªº­È</li>
-  <li>±N¥ª°¼ªº¶b»P j ¶i¦æ¥æ´«</li>
-  <li>¹ï¶b¥ªÃä¶i¦æ»¼°j</li>
-  <li>¹ï¶b¥kÃä¶i¦æ»¼°j</li>
+  <li>ä»¤ç´¢å¼• i å¾æ•¸åˆ—å·¦æ–¹å¾€å³æ–¹æ‰¾ï¼Œç›´åˆ°æ‰¾åˆ°å¤§æ–¼ s çš„æ•¸</li>
+  <li>ä»¤ç´¢å¼• j å¾æ•¸åˆ—å·¦å³æ–¹å¾€å·¦æ–¹æ‰¾ï¼Œç›´åˆ°æ‰¾åˆ°å°æ–¼ s çš„æ•¸</li>
+  <li>å¦‚æœ i &gt;= jï¼Œå‰‡é›¢é–‹è¿´åœˆ</li>
+  <li>å¦‚æœ i &lt; jï¼Œå‰‡äº¤æ›ç´¢å¼•ièˆ‡jå…©è™•çš„å€¼</li>
+  <li>å°‡å·¦å´çš„è»¸èˆ‡ j é€²è¡Œäº¤æ›</li>
+  <li>å°è»¸å·¦é‚Šé€²è¡Œéè¿´</li>
+  <li>å°è»¸å³é‚Šé€²è¡Œéè¿´</li>
 </ol>
 <br>
-³z¹L¥H¤Uºtºâªk¡A«h¶b¥ªÃäªº­È³£·|¤p©ós¡A¶b¥kÃäªº­È³£·|¤j©ós¡A¦p¦¹¦A¹ï¶b¥ª¥k¨âÃä¶i¦æ»¼°j¡A´N¥i¥H¹ï§¹¦¨±Æ§Çªº¥Øªº¡A¨Ò¦p¤U­±ªº¹ê¨Ò¡A*ªí¥Ü­n¥æ´«ªº¼Æ¡A[]ªí¥Ü¶b¡G<br>
+é€éä»¥ä¸‹æ¼”ç®—æ³•ï¼Œå‰‡è»¸å·¦é‚Šçš„å€¼éƒ½æœƒå°æ–¼sï¼Œè»¸å³é‚Šçš„å€¼éƒ½æœƒå¤§æ–¼sï¼Œå¦‚æ­¤å†å°è»¸å·¦å³å…©é‚Šé€²è¡Œéè¿´ï¼Œå°±å¯ä»¥å°å®Œæˆæ’åºçš„ç›®çš„ï¼Œä¾‹å¦‚ä¸‹é¢çš„å¯¦ä¾‹ï¼Œ*è¡¨ç¤ºè¦äº¤æ›çš„æ•¸ï¼Œ[]è¡¨ç¤ºè»¸ï¼š<br>
 <ul>
-  <li>[41]¡@24¡@76*¡@11¡@45¡@64¡@21¡@69¡@19¡@36*</li>
-  <li>[41]¡@24¡@36¡@11¡@45*¡@64¡@21¡@69¡@19*¡@76</li>
-  <li>[41]¡@24¡@36¡@11¡@19¡@64*¡@21*¡@69¡@45¡@76</li>
-  <li>[41]¡@24¡@36¡@11¡@19¡@21¡@64¡@69¡@45¡@76</li>
-  <li>21¡@24¡@36¡@11¡@19¡@[41]¡@64¡@69¡@45¡@76</li>
+  <li>[41]ã€€24ã€€76*ã€€11ã€€45ã€€64ã€€21ã€€69ã€€19ã€€36*</li>
+  <li>[41]ã€€24ã€€36ã€€11ã€€45*ã€€64ã€€21ã€€69ã€€19*ã€€76</li>
+  <li>[41]ã€€24ã€€36ã€€11ã€€19ã€€64*ã€€21*ã€€69ã€€45ã€€76</li>
+  <li>[41]ã€€24ã€€36ã€€11ã€€19ã€€21ã€€64ã€€69ã€€45ã€€76</li>
+  <li>21ã€€24ã€€36ã€€11ã€€19ã€€[41]ã€€64ã€€69ã€€45ã€€76</li>
 </ul>
 <br>
-¦b¤W­±ªº¨Ò¤l¤¤¡A41¥ªÃäªº­È³£¤ñ¥¦¤p¡A¦Ó¥kÃäªº­È³£¤ñ¥¦¤j¡A¦p¦¹¥ª¥k¦A¶i¦æ»¼°j¦Ü±Æ§Ç§¹¦¨¡C <br>
+åœ¨ä¸Šé¢çš„ä¾‹å­ä¸­ï¼Œ41å·¦é‚Šçš„å€¼éƒ½æ¯”å®ƒå°ï¼Œè€Œå³é‚Šçš„å€¼éƒ½æ¯”å®ƒå¤§ï¼Œå¦‚æ­¤å·¦å³å†é€²è¡Œéè¿´è‡³æ’åºå®Œæˆã€‚ <br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void quicksort(int[], int, int); <br><br>int main(void) { <br>    int number[MAX] = {0}; <br>    int i, num;  <br><br>    srand(time(NULL)); <br><br>    printf("±Æ§Ç«e¡G"); <br>    for(i = 0; i &lt; MAX; i++) { <br>        number[i] = rand() % 100; <br>        printf("%d ", number[i]); <br>    } <br><br>    quicksort(number, 0, MAX-1); <br><br>    printf("\n±Æ§Ç«á¡G"); <br>    for(i = 0; i &lt; MAX; i++) <br>        printf("%d ", number[i]); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int i, j, s; <br><br>    if(left &lt; right) { <br>        s = number[left]; <br>        i = left; <br>        j = right + 1; <br><br>        while(1) { <br>            // ¦V¥k§ä<br>            while(i + 1 &lt; number.length &amp;&amp; number[++i] &lt; s) ;  <br>            // ¦V¥ª§ä  <br>            while(j -1 &gt; -1 &amp;&amp; number[--j] &gt; s) ;  <br>            if(i &gt;= j) <br>                break; <br>            SWAP(number[i], number[j]); <br>        } <br><br>        number[left] = number[j]; <br>        number[j] = s; <br><br>        quicksort(number, left, j-1);   // ¹ï¥ªÃä¶i¦æ»¼°j <br>        quicksort(number, j+1, right);  // ¹ï¥kÃä¶i¦æ»¼°j <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void quicksort(int[], int, int); <br><br>int main(void) { <br>    int number[MAX] = {0}; <br>    int i, num;  <br><br>    srand(time(NULL)); <br><br>    printf("æ’åºå‰ï¼š"); <br>    for(i = 0; i &lt; MAX; i++) { <br>        number[i] = rand() % 100; <br>        printf("%d ", number[i]); <br>    } <br><br>    quicksort(number, 0, MAX-1); <br><br>    printf("\næ’åºå¾Œï¼š"); <br>    for(i = 0; i &lt; MAX; i++) <br>        printf("%d ", number[i]); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int i, j, s; <br><br>    if(left &lt; right) { <br>        s = number[left]; <br>        i = left; <br>        j = right + 1; <br><br>        while(1) { <br>            // å‘å³æ‰¾<br>            while(i + 1 &lt; number.length &amp;&amp; number[++i] &lt; s) ;  <br>            // å‘å·¦æ‰¾  <br>            while(j -1 &gt; -1 &amp;&amp; number[--j] &gt; s) ;  <br>            if(i &gt;= j) <br>                break; <br>            SWAP(number[i], number[j]); <br>        } <br><br>        number[left] = number[j]; <br>        number[j] = s; <br><br>        quicksort(number, left, j-1);   // å°å·¦é‚Šé€²è¡Œéè¿´ <br>        quicksort(number, j+1, right);  // å°å³é‚Šé€²è¡Œéè¿´ <br>    } <br>} <br></pre>
 
 <br>
 
@@ -106,7 +106,7 @@ Gossip@caterpillar</a></h3>
   </li>
 </ul>
 
-<pre>public class QuickSort {<br>    public static void sort(int[] number) {<br>        sort(number, 0, number.length-1);<br>    }<br>    <br>    private static void sort(int[] number, <br>                             int left, int right) {<br>        if(left &lt; right) { <br>            int s = number[left]; <br>            int i = left; <br>            int j = right + 1; <br><br>            while(true) { <br>                // ¦V¥k§ä <br>                while(i + 1 &lt; number.length &amp;&amp; number[++i] &lt; s) ;  <br>                // ¦V¥ª§ä <br>                while(j -1 &gt; -1 &amp;&amp; number[--j] &gt; s) ;  <br>                if(i &gt;= j) <br>                    break; <br>                swap(number, i, j); <br>            } <br><br>            number[left] = number[j]; <br>            number[j] = s; <br><br>            sort(number, left, j-1);   // ¹ï¥ªÃä¶i¦æ»¼°j <br>            sort(number, j+1, right);  // ¹ï¥kÃä¶i¦æ»¼°j <br>        }<br>    }<br>    <br>    private static void swap(int[] number, int i, int j) {<br>        int t; <br>        t = number[i]; <br>        number[i] = number[j]; <br>        number[j] = t;<br>    }<br>}</pre>
+<pre>public class QuickSort {<br>    public static void sort(int[] number) {<br>        sort(number, 0, number.length-1);<br>    }<br>    <br>    private static void sort(int[] number, <br>                             int left, int right) {<br>        if(left &lt; right) { <br>            int s = number[left]; <br>            int i = left; <br>            int j = right + 1; <br><br>            while(true) { <br>                // å‘å³æ‰¾ <br>                while(i + 1 &lt; number.length &amp;&amp; number[++i] &lt; s) ;  <br>                // å‘å·¦æ‰¾ <br>                while(j -1 &gt; -1 &amp;&amp; number[--j] &gt; s) ;  <br>                if(i &gt;= j) <br>                    break; <br>                swap(number, i, j); <br>            } <br><br>            number[left] = number[j]; <br>            number[j] = s; <br><br>            sort(number, left, j-1);   // å°å·¦é‚Šé€²è¡Œéè¿´ <br>            sort(number, j+1, right);  // å°å³é‚Šé€²è¡Œéè¿´ <br>        }<br>    }<br>    <br>    private static void swap(int[] number, int i, int j) {<br>        int t; <br>        t = number[i]; <br>        number[i] = number[j]; <br>        number[j] = t;<br>    }<br>}</pre>
 <br>
 <br>
 <br>
