--- a/AlgorithmGossip/QuickSort2.htm
+++ b/AlgorithmGossip/QuickSort2.htm
@@ -33,7 +33,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -44,7 +44,7 @@
   
   
   
-  <title>§Ö³t±Æ§Çªk¡]¤G¡^</title>
+  <title>å¿«é€Ÿæ’åºæ³•ï¼ˆäºŒï¼‰</title>
 </head>
 
 
@@ -61,46 +61,46 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;§Ö³t±Æ§Çªk¡]¤G¡^</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;å¿«é€Ÿæ’åºæ³•ï¼ˆäºŒï¼‰</a></h1>
 
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-¦b §Ö³t±Æ§Çªk¡]¤@¡^ ¤¤¡A¨C¦¸±N³Ì¥ªÃäªº¤¸¯À³]¬°¶b¡A¦Ó¤§«e´¿¸g»¡¹L¡A§Ö³t±Æ§Çªkªº¥[³t¦b©ó¶bªº¿ï¾Ü¡A¦b³o­Ó¨Ò¤l¤¤¡A¥u±N¶b³]©w¬°¤¤¶¡ªº¤¸¯À¡A¨Ì³o­Ó¤¸¯À§@°ò·Ç¶i¦æ¤ñ¸û¡A³o¥i¥H¼W¥[§Ö³t±Æ§Çªkªº®Ä²v¡C<br>
+åœ¨ å¿«é€Ÿæ’åºæ³•ï¼ˆä¸€ï¼‰ ä¸­ï¼Œæ¯æ¬¡å°‡æœ€å·¦é‚Šçš„å…ƒç´ è¨­ç‚ºè»¸ï¼Œè€Œä¹‹å‰æ›¾ç¶“èªªéï¼Œå¿«é€Ÿæ’åºæ³•çš„åŠ é€Ÿåœ¨æ–¼è»¸çš„é¸æ“‡ï¼Œåœ¨é€™å€‹ä¾‹å­ä¸­ï¼Œåªå°‡è»¸è¨­å®šç‚ºä¸­é–“çš„å…ƒç´ ï¼Œä¾é€™å€‹å…ƒç´ ä½œåŸºæº–é€²è¡Œæ¯”è¼ƒï¼Œé€™å¯ä»¥å¢åŠ å¿«é€Ÿæ’åºæ³•çš„æ•ˆç‡ã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-¦b³o­Ó¨Ò¤l¤¤¡A¨ú¤¤¶¡ªº¤¸¯Às§@¤ñ¸û¡A¦P¼Ëªº¥ı±o¥k§ä¤ñs¤jªº¯Á¤Ş i¡AµM«á§ä¤ñs¤pªº¯Á¤Ş j¡A¥u­n¨âÃäªº¯Á¤ŞÁÙ¨S¦³¥æ·|¡A´N¥æ´« i »P j ªº¤¸¯À­È¡A³o¦¸¤£¥Î¦A¶i¦æ¶bªº¥æ´«¤F¡A¦]¬°¦b´M§ä¥æ´«ªº¹Lµ{¤¤¡A¶b¦ì¸mªº¤¸¯À¤]·|°Ñ»P¥æ´«ªº°Ê§@¡A¨Ò¦p¡G<br>
+åœ¨é€™å€‹ä¾‹å­ä¸­ï¼Œå–ä¸­é–“çš„å…ƒç´ sä½œæ¯”è¼ƒï¼ŒåŒæ¨£çš„å…ˆå¾—å³æ‰¾æ¯”så¤§çš„ç´¢å¼• iï¼Œç„¶å¾Œæ‰¾æ¯”så°çš„ç´¢å¼• jï¼Œåªè¦å…©é‚Šçš„ç´¢å¼•é‚„æ²’æœ‰äº¤æœƒï¼Œå°±äº¤æ› i èˆ‡ j çš„å…ƒç´ å€¼ï¼Œé€™æ¬¡ä¸ç”¨å†é€²è¡Œè»¸çš„äº¤æ›äº†ï¼Œå› ç‚ºåœ¨å°‹æ‰¾äº¤æ›çš„éç¨‹ä¸­ï¼Œè»¸ä½ç½®çš„å…ƒç´ ä¹Ÿæœƒåƒèˆ‡äº¤æ›çš„å‹•ä½œï¼Œä¾‹å¦‚ï¼š<br>
 
-<div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">41¡@24¡@76¡@11¡@45¡@64¡@21¡@69¡@19¡@36</span><br>
+<div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">41ã€€24ã€€76ã€€11ã€€45ã€€64ã€€21ã€€69ã€€19ã€€36</span><br>
 
 </div>
 
 <br>
 
-­º¥ıleft¬°0¡Aright¬°9¡A(left+right)/2 = 4¡]¨ú¾ã¼Æªº°Ó¡^¡A©Ò¥H¶b¬°¯Á¤Ş4ªº¦ì¸m¡A¤ñ¸ûªº¤¸¯À¬O45¡A±z©¹¥k§ä¤ñ45¤jªº¡A©¹¥ª§ä¤ñ45¤pªº¶i¦æ¥æ´«¡G<br>
+é¦–å…ˆleftç‚º0ï¼Œrightç‚º9ï¼Œ(left+right)/2 = 4ï¼ˆå–æ•´æ•¸çš„å•†ï¼‰ï¼Œæ‰€ä»¥è»¸ç‚ºç´¢å¼•4çš„ä½ç½®ï¼Œæ¯”è¼ƒçš„å…ƒç´ æ˜¯45ï¼Œæ‚¨å¾€å³æ‰¾æ¯”45å¤§çš„ï¼Œå¾€å·¦æ‰¾æ¯”45å°çš„é€²è¡Œäº¤æ›ï¼š<br>
 
 <ul style="font-family: Courier New,Courier,monospace;">
 
-  <li>41¡@24¡@76*¡@11¡@[45]¡@64¡@21¡@69¡@19¡@*36</li>
+  <li>41ã€€24ã€€76*ã€€11ã€€[45]ã€€64ã€€21ã€€69ã€€19ã€€*36</li>
 
-  <li>41¡@24¡@36¡@11¡@45*¡@64¡@21¡@69¡@19*¡@76</li>
+  <li>41ã€€24ã€€36ã€€11ã€€45*ã€€64ã€€21ã€€69ã€€19*ã€€76</li>
 
-  <li>41¡@24¡@36¡@11¡@19¡@64*¡@21*¡@69¡@45¡@76</li>
+  <li>41ã€€24ã€€36ã€€11ã€€19ã€€64*ã€€21*ã€€69ã€€45ã€€76</li>
 
-  <li>[41¡@24¡@36¡@11¡@19¡@21]¡@[64¡@69¡@45¡@76]</li>
+  <li>[41ã€€24ã€€36ã€€11ã€€19ã€€21]ã€€[64ã€€69ã€€45ã€€76]</li>
 
 </ul>
 
 <br>
 
-§¹¦¨¥H¤W¤§«á¡A¦Aªì§O¹ï¥ªÃä¬A¸¹»P¥kÃä¬A¸¹ªº³¡¥÷¶i¦æ»¼°j¡A¦p¦¹´N¥i¥H§¹¦¨±Æ§Çªº¥Øªº¡C <br>
+å®Œæˆä»¥ä¸Šä¹‹å¾Œï¼Œå†åˆåˆ¥å°å·¦é‚Šæ‹¬è™Ÿèˆ‡å³é‚Šæ‹¬è™Ÿçš„éƒ¨ä»½é€²è¡Œéè¿´ï¼Œå¦‚æ­¤å°±å¯ä»¥å®Œæˆæ’åºçš„ç›®çš„ã€‚ <br>
 
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -111,7 +111,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void quicksort(int[], int, int); <br><br>int main(void) { <br>    int number[MAX] = {0}; <br>    int i, num;  <br><br>    srand(time(NULL)); <br><br>    printf("±Æ§Ç«e¡G"); <br>    for(i = 0; i &lt; MAX; i++) { <br>        number[i] = rand() % 100; <br>        printf("%d ", number[i]); <br>    } <br><br>    quicksort(number, 0, MAX-1); <br><br>    printf("\n±Æ§Ç«á¡G"); <br>    for(i = 0; i &lt; MAX; i++) <br>        printf("%d ", number[i]); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int i, j, s; <br><br>    if(left &lt; right) { <br>        s = number[(left+right)/2]; <br>        i = left - 1; <br>        j = right + 1; <br><br>        while(1) { <br>            while(number[++i] &lt; s) ;  // ¦V¥k§ä <br>            while(number[--j] &gt; s) ;  // ¦V¥ª§ä <br>            if(i &gt;= j) <br>                break; <br>            SWAP(number[i], number[j]); <br>        } <br><br>        quicksort(number, left, i-1);   // ¹ï¥ªÃä¶i¦æ»¼°j <br>        quicksort(number, j+1, right);  // ¹ï¥kÃä¶i¦æ»¼°j <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void quicksort(int[], int, int); <br><br>int main(void) { <br>    int number[MAX] = {0}; <br>    int i, num;  <br><br>    srand(time(NULL)); <br><br>    printf("æ’åºå‰ï¼š"); <br>    for(i = 0; i &lt; MAX; i++) { <br>        number[i] = rand() % 100; <br>        printf("%d ", number[i]); <br>    } <br><br>    quicksort(number, 0, MAX-1); <br><br>    printf("\næ’åºå¾Œï¼š"); <br>    for(i = 0; i &lt; MAX; i++) <br>        printf("%d ", number[i]); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int i, j, s; <br><br>    if(left &lt; right) { <br>        s = number[(left+right)/2]; <br>        i = left - 1; <br>        j = right + 1; <br><br>        while(1) { <br>            while(number[++i] &lt; s) ;  // å‘å³æ‰¾ <br>            while(number[--j] &gt; s) ;  // å‘å·¦æ‰¾ <br>            if(i &gt;= j) <br>                break; <br>            SWAP(number[i], number[j]); <br>        } <br><br>        quicksort(number, left, i-1);   // å°å·¦é‚Šé€²è¡Œéè¿´ <br>        quicksort(number, j+1, right);  // å°å³é‚Šé€²è¡Œéè¿´ <br>    } <br>} <br></pre>
 
 
 <br>
@@ -125,7 +125,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>public class QuickSort {<br>    public static void sort(int[] number) {<br>        sort(number, 0, number.length-1);<br>    }<br>    <br>    private static void sort(int[] number, <br>                             int left, int right) {<br>        if(left &lt; right) { <br>            int s = number[(left+right)/2]; <br>            int i = left - 1; <br>            int j = right + 1; <br><br>            while(true) { <br>                // ¦V¥k§ä<br>                while(number[++i] &lt; s) ;<br>                // ¦V¥ª§ä<br>                while(number[--j] &gt; s) ; <br>                if(i &gt;= j) <br>                    break; <br>                swap(number, i, j); <br>            } <br><br>            sort(number, left, i-1);   // ¹ï¥ªÃä¶i¦æ»¼°j <br>            sort(number, j+1, right);  // ¹ï¥kÃä¶i¦æ»¼°j <br>        }<br>    }<br>    <br>    private static void swap(int[] number, int i, int j) {<br>        int t; <br>        t = number[i]; <br>        number[i] = number[j]; <br>        number[j] = t;<br>    }<br>} </pre>
+<pre>public class QuickSort {<br>    public static void sort(int[] number) {<br>        sort(number, 0, number.length-1);<br>    }<br>    <br>    private static void sort(int[] number, <br>                             int left, int right) {<br>        if(left &lt; right) { <br>            int s = number[(left+right)/2]; <br>            int i = left - 1; <br>            int j = right + 1; <br><br>            while(true) { <br>                // å‘å³æ‰¾<br>                while(number[++i] &lt; s) ;<br>                // å‘å·¦æ‰¾<br>                while(number[--j] &gt; s) ; <br>                if(i &gt;= j) <br>                    break; <br>                swap(number, i, j); <br>            } <br><br>            sort(number, left, i-1);   // å°å·¦é‚Šé€²è¡Œéè¿´ <br>            sort(number, j+1, right);  // å°å³é‚Šé€²è¡Œéè¿´ <br>        }<br>    }<br>    <br>    private static void swap(int[] number, int i, int j) {<br>        int t; <br>        t = number[i]; <br>        number[i] = number[j]; <br>        number[j] = t;<br>    }<br>} </pre>
 
 <br>
 
