--- a/AlgorithmGossip/QuickSort3.htm
+++ b/AlgorithmGossip/QuickSort3.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>§Ö³t±Æ§Çªk¡]¤T¡^</title>
+  <title>å¿«é€Ÿæ’åºæ³•ï¼ˆä¸‰ï¼‰</title>
 </head>
 
 
@@ -51,42 +51,42 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;§Ö³t±Æ§Çªk¡]¤T¡^</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;å¿«é€Ÿæ’åºæ³•ï¼ˆä¸‰ï¼‰</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
-¤§«e»¡¹L¶bªº¿ï¾Ü¬O§Ö³t±Æ§Çªkªº®Ä²vÃöÁä¤§¤@¡A¦b³oÃäªº§Ö³t±Æ§Çªkªº¶b¿ï¾Ü¤è¦¡§ó¥[§Ö¤F§Ö³t±Æ§Çªkªº®Ä²v¡A¥¦¬O¨Ó¦Ûºtºâªk¦W®Ñ Introduction to Algorithms ¤§¤¤¡C<br>
-<h2>¸Ñªk</h2>
-¥ı»¡©ú³o­Ó§Ö³t±Æ§Çªkªº·§©À¡A¥¦¥H³Ì¥kÃäªº­Ès§@¤ñ¸ûªº¼Ğ·Ç¡A±N¾ã­Ó¼Æ¦C¤À¬°¤T­Ó³¡¥÷¡A¤@­Ó¬O¤p©ósªº³¡¥÷¡A¤@­Ó¬O¤j©ósªº³¡¥÷¡A¤@­Ó¬O¥¼³B²zªº³¡¥÷¡A¦p¤U©Ò¥Ü ¡G <br>
+<h2>èªªæ˜</h2>
+ä¹‹å‰èªªéè»¸çš„é¸æ“‡æ˜¯å¿«é€Ÿæ’åºæ³•çš„æ•ˆç‡é—œéµä¹‹ä¸€ï¼Œåœ¨é€™é‚Šçš„å¿«é€Ÿæ’åºæ³•çš„è»¸é¸æ“‡æ–¹å¼æ›´åŠ å¿«äº†å¿«é€Ÿæ’åºæ³•çš„æ•ˆç‡ï¼Œå®ƒæ˜¯ä¾†è‡ªæ¼”ç®—æ³•åæ›¸ Introduction to Algorithms ä¹‹ä¸­ã€‚<br>
+<h2>è§£æ³•</h2>
+å…ˆèªªæ˜é€™å€‹å¿«é€Ÿæ’åºæ³•çš„æ¦‚å¿µï¼Œå®ƒä»¥æœ€å³é‚Šçš„å€¼sä½œæ¯”è¼ƒçš„æ¨™æº–ï¼Œå°‡æ•´å€‹æ•¸åˆ—åˆ†ç‚ºä¸‰å€‹éƒ¨ä»½ï¼Œä¸€å€‹æ˜¯å°æ–¼sçš„éƒ¨ä»½ï¼Œä¸€å€‹æ˜¯å¤§æ–¼sçš„éƒ¨ä»½ï¼Œä¸€å€‹æ˜¯æœªè™•ç†çš„éƒ¨ä»½ï¼Œå¦‚ä¸‹æ‰€ç¤º ï¼š <br>
 
-<div style="text-align: center;"><img style="width: 283px; height: 68px;" alt="§Ö³t±Æ§Ç" title="§Ö³t±Æ§Ç" src="images/quickSort3-1.jpg"></div>
+<div style="text-align: center;"><img style="width: 283px; height: 68px;" alt="å¿«é€Ÿæ’åº" title="å¿«é€Ÿæ’åº" src="images/quickSort3-1.jpg"></div>
 <br>
-¦b±Æ§Çªº¹Lµ{¤¤¡Ai »P j ³£·|¤£Â_ªº©¹¥k¶i¦æ¤ñ¸û»P¥æ´«¡A³Ì«á¼Æ¦C·|ÅÜ¬°¥H¤Uªºª¬ºA¡G <br>
-<div style="text-align: center;"><img style="width: 285px; height: 69px;" alt="§Ö³t±Æ§Ç" title="§Ö³t±Æ§Ç" src="images/quickSort3-2.jpg"></div>
+åœ¨æ’åºçš„éç¨‹ä¸­ï¼Œi èˆ‡ j éƒ½æœƒä¸æ–·çš„å¾€å³é€²è¡Œæ¯”è¼ƒèˆ‡äº¤æ›ï¼Œæœ€å¾Œæ•¸åˆ—æœƒè®Šç‚ºä»¥ä¸‹çš„ç‹€æ…‹ï¼š <br>
+<div style="text-align: center;"><img style="width: 285px; height: 69px;" alt="å¿«é€Ÿæ’åº" title="å¿«é€Ÿæ’åº" src="images/quickSort3-2.jpg"></div>
 <br>
-µM«á±Nsªº­È¸m©ó¤¤¶¡¡A±µ¤U¨Ó´N¥H¬Û¦Pªº¨BÆJ·|¥ª¥k¨âÃäªº¼Æ¦C¶i¦æ±Æ§Çªº°Ê§@¡A¦p¤U©Ò¥Ü¡G <br>
-<div style="text-align: center;"><img style="width: 283px; height: 58px;" alt="§Ö³t±Æ§Ç" title="§Ö³t±Æ§Ç" src="images/quickSort3-3.jpg"></div>
+ç„¶å¾Œå°‡sçš„å€¼ç½®æ–¼ä¸­é–“ï¼Œæ¥ä¸‹ä¾†å°±ä»¥ç›¸åŒçš„æ­¥é©Ÿæœƒå·¦å³å…©é‚Šçš„æ•¸åˆ—é€²è¡Œæ’åºçš„å‹•ä½œï¼Œå¦‚ä¸‹æ‰€ç¤ºï¼š <br>
+<div style="text-align: center;"><img style="width: 283px; height: 58px;" alt="å¿«é€Ÿæ’åº" title="å¿«é€Ÿæ’åº" src="images/quickSort3-3.jpg"></div>
 <br>
 
-¾ã­Óºtºâªº¹Lµ{¡Aª½±µºK¿ı®Ñ¤¤ªºµêÀÀ½X¨Ó§@»¡©ú¡G <br>
+æ•´å€‹æ¼”ç®—çš„éç¨‹ï¼Œç›´æ¥æ‘˜éŒ„æ›¸ä¸­çš„è™›æ“¬ç¢¼ä¾†ä½œèªªæ˜ï¼š <br>
 
 <pre>QUICKSORT(A, p, r) <br>    if p &lt; r <br>        then q &lt;- PARTITION(A, p, r) <br>                 QUICKSORT(A, p, q-1) <br>                 QUICKSORT(A, q+1, r) <br>end QUICKSORT <br><br>PARTITION(A, p, r) <br>    x &lt;- A[r] <br>    i &lt;- p-1 <br>    for j &lt;- p to r-1 <br>        do if A[j] &lt;= x <br>                 then  i &lt;- i+1 <br>                         exchange A[i]&lt;-&gt;A[j] <br>    exchange A[i+1]&lt;-&gt;A[r] <br>    return i+1 <br>end PARTITION  <br></pre>
 
 <br>
-¤@­Ó¹ê»Ú¨Ò¤lªººtºâ¦p¤U©Ò¥Ü¡G<br>
-<div style="text-align: center;"><img style="width: 493px; height: 241px;" alt="§Ö³t±Æ§Ç" title="§Ö³t±Æ§Ç" src="images/quickSort3-4.jpg"></div>
+ä¸€å€‹å¯¦éš›ä¾‹å­çš„æ¼”ç®—å¦‚ä¸‹æ‰€ç¤ºï¼š<br>
+<div style="text-align: center;"><img style="width: 493px; height: 241px;" alt="å¿«é€Ÿæ’åº" title="å¿«é€Ÿæ’åº" src="images/quickSort3-4.jpg"></div>
 <br>
 <br>
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>int partition(int[], int, int); <br>void quicksort(int[], int, int); <br><br>int main(void) { <br>    int number[MAX] = {0}; <br>    int i, num;  <br><br>    srand(time(NULL)); <br><br>    printf("±Æ§Ç«e¡G"); <br>    for(i = 0; i &lt; MAX; i++) { <br>        number[i] = rand() % 100; <br>        printf("%d ", number[i]); <br>    } <br><br>    quicksort(number, 0, MAX-1); <br><br>    printf("\n±Æ§Ç«á¡G"); <br>    for(i = 0; i &lt; MAX; i++) <br>        printf("%d ", number[i]); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>int partition(int number[], int left, int right) { <br>    int i, j, s; <br><br>    s = number[right]; <br>    i = left - 1; <br><br>    for(j = left; j &lt; right; j++) { <br>        if(number[j] &lt;= s) { <br>            i++; <br>            SWAP(number[i], number[j]); <br>        } <br>    } <br><br>    SWAP(number[i+1], number[right]); <br>    return i+1; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int q; <br><br>    if(left &lt; right) { <br>        q = partition(number, left, right); <br>        quicksort(number, left, q-1); <br>        quicksort(number, q+1, right); <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>int partition(int[], int, int); <br>void quicksort(int[], int, int); <br><br>int main(void) { <br>    int number[MAX] = {0}; <br>    int i, num;  <br><br>    srand(time(NULL)); <br><br>    printf("æ’åºå‰ï¼š"); <br>    for(i = 0; i &lt; MAX; i++) { <br>        number[i] = rand() % 100; <br>        printf("%d ", number[i]); <br>    } <br><br>    quicksort(number, 0, MAX-1); <br><br>    printf("\næ’åºå¾Œï¼š"); <br>    for(i = 0; i &lt; MAX; i++) <br>        printf("%d ", number[i]); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>int partition(int number[], int left, int right) { <br>    int i, j, s; <br><br>    s = number[right]; <br>    i = left - 1; <br><br>    for(j = left; j &lt; right; j++) { <br>        if(number[j] &lt;= s) { <br>            i++; <br>            SWAP(number[i], number[j]); <br>        } <br>    } <br><br>    SWAP(number[i+1], number[right]); <br>    return i+1; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int q; <br><br>    if(left &lt; right) { <br>        q = partition(number, left, right); <br>        quicksort(number, left, q-1); <br>        quicksort(number, q+1, right); <br>    } <br>} <br></pre>
 
 <br>
 
